README: frame SWAT as a successor to AWT and SWT
Rewrite the opening to lead with what SWAT is (a thin Java layer over
the host toolkit, FFM-driven, no JNI/JNA/C wrapper) and what it is not
(Swing, Compose Desktop, Skia, pluggable L&F).

Add three new sections: heritage (AWT/SWT lineage and why each fell
short), a comparison table against AWT/Swing/SWT/JavaFX/Skia/Compose,
and the viability argument (Java 25 stable FFM + convergence across
AppKit / WinUI 3 / GTK 4 + libadwaita).

Also fix the acronym in the title: System Window Abstraction Toolkit.